--- a/src/FoodZone/FoodZone.Web/Areas/Identity/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Identity/Views/Shared/_LayoutAdmin.cshtml
@@ -124,7 +124,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index", "MenuAdmin", new {area="admin"})">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Quản lý Menu</span>
+                    <span>Quản lý menu</span>
                 </a>
             </li>
             <li class="nav-item">
