--- a/src/FoodZone/FoodZone.Web/Views/Account/ForgotPassword.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Account/ForgotPassword.cshtml
@@ -17,6 +17,7 @@
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary("", new { @class = "text-danger" })
                         <div class="single-input-item mb-3">
+                            Email &nbsp; <p class="d-inline-block text-danger">*</p>
                             <input type="email" name="Email" placeholder="Email">
                         </div>
 
