--- a/src/FoodZone/FoodZone.Web/Views/Account/ResetPassword.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Account/ResetPassword.cshtml
@@ -16,17 +16,20 @@
                         @Html.AntiForgeryToken()
                         @Html.HiddenFor(model => model.Code)
                         @Html.ValidationSummary("", new { @class = "text-danger" })
-                        <div class="single-input-item mb-3">
-                            <input type="email" name="Email" placeholder="Email">
-                        </div>
+                <div class="single-input-item mb-3">
+                    Email &nbsp; <p class="d-inline-block text-danger">*</p>
+                    <input type="email" name="Email" placeholder="Email">
+                </div>
 
-                        <div class="single-input-item mb-3">
-                            <input type="password" name="Password" placeholder="Mật khẩu">
-                        </div>
+                <div class="single-input-item mb-3">
+                    Mật khẩu &nbsp; <p class="d-inline-block text-danger">*</p>
+                    <input type="password" name="Password" placeholder="Mật khẩu">
+                </div>
 
-                        <div class="single-input-item mb-3">
-                            <input type="password" name="ConfirmPassword" placeholder="Xác nhận mật khẩu">
-                        </div>
+                <div class="single-input-item mb-3">
+                    Xác nhận mật khẩu &nbsp; <p class="d-inline-block text-danger">*</p>
+                    <input type="password" name="ConfirmPassword" placeholder="Xác nhận mật khẩu">
+                </div>
 
                         <div class="single-input-item mb-3" style="text-align:center">
                             <button class="btn flosun-button secondary-btn theme-color rounded-0">Xác nhận</button>
