--- a/src/FoodZone/FoodZone.Web/Views/Manage/ChangePassword.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Manage/ChangePassword.cshtml
@@ -16,13 +16,16 @@
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary("", new { @class = "text-danger" })
                         <div class="single-input-item mb-3">
+                            Mật khẩu cũ &nbsp; <p class="d-inline-block text-danger">*</p>
                             <input type="password" name="OldPassword" placeholder="Mật khẩu cũ">
                         </div>
                         <div class="single-input-item mb-3">
+                            Mật khẩu mới &nbsp; <p class="d-inline-block text-danger">*</p>
                             <input type="password" name="NewPassword" placeholder="Mật khẩu mới">
                         </div>
 
                         <div class="single-input-item mb-3">
+                            Xác nhận mật khẩu &nbsp; <p class="d-inline-block text-danger">*</p>
                             <input type="password" name="ConfirmPassword" placeholder="Xác nhận mật khẩu">
                         </div>
 
