--- a/src/FoodZone/FoodZone.Web/Views/Menu/GetAll.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Menu/GetAll.cshtml
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-lg-12 col-custom">
             <div class="tab-content mb-text" id="myTabContent">
-                <ul class="nav nav-tabs nav-menu-custom" id="myTab" role="tablist">
+                <ul class="nav nav-tabs nav-menu-custom w-50" id="myTab" role="tablist">
                     @for (int i = 0; i < menuArray.Count(); i++)
                     {
                         if (menuArray[i].Id == 1)
