--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
@@ -20,21 +20,21 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-custom">
                     <div class="single-footer-widget">
-                        <h2 class="widget-title">Support</h2>
+                        <h2 class="widget-title">Thông tin</h2>
                         <ul class="widget-list">
-                            <li><a href="contact-us.html">Online Support</a></li>
-                            <li><a href="contact-us.html">Shipping Policy</a></li>
-                            <li><a href="contact-us.html">Return Policy</a></li>
-                            <li><a href="contact-us.html">Privacy Policy</a></li>
-                            <li><a href="contact-us.html">Terms of Service</a></li>
+                            <li><a href="#">Trang chủ</a></li>
+                            <li><a href="#">Giới thiệu</a></li>
+                            <li><a href="#">Ưu đãi</a></li>
+                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="#">Thực đơn</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-custom">
                     <div class="single-footer-widget">
-                        <h2 class="widget-title">See Information</h2>
+                        <h2 class="widget-title">Địa chỉ</h2>
                         <div class="widget-body">
-                            <address>123, ABC, Road ##, Main City, Your address goes here.<br>Phone: 01234 567 890<br>Email: https://example.com</address>
+                            <address>Tầng 60, Keangnam, Mỹ Đình<br>Số điện thoại: 01234 567 890<br>Email: foodzone@foodzone.com</address>
                         </div>
                     </div>
                 </div>
