--- a/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
@@ -27,7 +27,7 @@
             <div class="col-12 col-custom">
                 <div class="input-item mb-4 display-flex-col">
                     <div class="display-flex-row">
-                        <div class="title-quantity font-weight-bold">Số lượng bàn</div>
+                        <div class="title-quantity font-weight-bold">Số lượng bàn &nbsp; <p class="d-inline-block text-danger">*</p></div>
                         <input id="capa" name="Capacity" type="number" required onkeyup="handleChangeCount()" 
                                class="border-0 rounded-0 input-area number gray-bg input-quantity" 
                                placeholder="Số lượng bàn" />
