--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
@@ -12,13 +12,13 @@
     <div class="form-horizontal d-flex flex-column">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group col-md-6">
-            Tên danh mục
+            Tên danh mục &nbsp; <p class="d-inline-block text-danger">*</p>
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group col-md-6">
-            <label class="control-label" for="Menu">Đồ Ăn</label>
+            <label class="control-label" for="Menu">Đồ Ăn &nbsp; <p class="d-inline-block text-danger">*</p></label>
             <div class="">
                 @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", @required = "required", style = "width:100%" })
             </div>
@@ -26,7 +26,7 @@
 
         <div class="form-group col-md-6 mt-3">
             <div> <img id="showImage" src="~/assets/images/category/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
-            <input type="file" class="form-control" id="avatar" name="uploadImage" />
+            <input type="file" class="form-control" id="avatar" name="uploadImage" accept="image/png, image/gif, image/jpeg" />
         </div>
 
         <div class="form-group form-button mt-4 col-md-12">
