--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
@@ -13,7 +13,7 @@
 <div class="form-horizontal d-flex flex-column">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group col-md-6">
-        Tên Đồ Ăn
+        Tên Đồ Ăn &nbsp; <p class="d-inline-block text-danger">*</p>
         @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Đồ Ăn" } })
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
