--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Create.cshtml
@@ -13,7 +13,7 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group col-md-6">
-            Tên menu
+            Tên menu &nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            Giá
+            Giá 
             <div>
                 <input class="form-control text-box single-line" data-val="true"
                        data-val-range="Vui lòng nhập giá trị lớn hơn 1" data-val-range-max="1000000000000" data-val-range-min="1" 
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            <label class="control-label" for="Menu">Danh mục</label>
+            <label class="control-label" for="Menu">Danh mục &nbsp; <p class="d-inline-block text-danger">*</p></label>
             <div class="">
                 @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", @required = "required", style = "width:100%" })
             </div>
