--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
@@ -14,13 +14,13 @@
 <div class="form-horizontal d-flex flex-column">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group col-md-6">
-        Tên menu
-        <div>
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group col-md-6">
+    Tên menu &nbsp; <p class="d-inline-block text-danger">*</p>
+    <div>
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
+        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
+</div>
 
     <div class="form-group col-md-6">
         Giá
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-group col-md-6">
-        <label class="control-label" for="Menu">Danh mục</label>
+        <label class="control-label" for="Menu">Danh mục &nbsp; <p class="d-inline-block text-danger">*</p></label>
         <div class="">
             @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", @required = "required", style = "width:100%" })
         </div>
