--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
@@ -15,7 +15,7 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         </div>
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-group col-md-12">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
 
         <div class="form-group col-md-6 mt-3">
             <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
-            <input type="file" class="form-control" id="avatar" name="uploadImage" />
+            <input type="file" class="form-control" id="avatar" name="uploadImage" accept="image/png, image/gif, image/jpeg"/>
         </div>
 
         <div class="form-group form-button mt-4 col-md-12">
