--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/AutoCreateTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/AutoCreateTable.cshtml
@@ -9,9 +9,9 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="input-group">
-        <div class="modal-body w-100 d-flex flex-column">Số lượng bàn: <input type="number" name="NumberOfTable" class="form-control bg-light border-0 small mt-1" aria-describedby="basic-addon2" placeholder="Số lượng bàn"></div>
-        <div class="modal-body w-100 d-flex  flex-column">Tầng: <input type="number" name="Floor" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Tầng"></div>
-        <div class="modal-body w-100 d-flex  flex-column">Số lượng người : <input type="text" id="inputNumber" onkeypress="onChangeNumber(event)" name="Capacities" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Số lượng người"></div>
+        <div class="modal-body w-100 d-flex flex-column">Số lượng bàn:&nbsp; <p class="d-inline-block text-danger">*</p> <input type="number" name="NumberOfTable" class="form-control bg-light border-0 small mt-1" aria-describedby="basic-addon2" placeholder="Số lượng bàn"></div>
+        <div class="modal-body w-100 d-flex  flex-column">Tầng:&nbsp; <p class="d-inline-block text-danger">*</p> <input type="number" name="Floor" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Tầng"></div>
+        <div class="modal-body w-100 d-flex  flex-column">Số lượng người :&nbsp; <p class="d-inline-block text-danger">*</p> <input type="text" id="inputNumber" onkeypress="onChangeNumber(event)" name="Capacities" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Số lượng người"></div>
     </div>
 
 
