--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Create.cshtml
@@ -14,7 +14,7 @@
        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group col-md-6 ">
-            @Html.LabelFor(model => model.Floor, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.Floor, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.Floor, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Floor, "", new { @class = "text-danger" })
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.NumberTable, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.NumberTable, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.NumberTable, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NumberTable, "", new { @class = "text-danger" })
@@ -30,7 +30,7 @@
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
             <div>
                 @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
